range and of operators are added

--- a/src/app/_header/header.component.html
+++ b/src/app/_header/header.component.html
@@ -1,6 +1,10 @@
 <nav class="shadow-lg p-3 mb-4 bg-body rounded navbar navbar-expand-lg navbar-light bg-light">
   <div class="container-fluid">
     <a class="shadow-sm p-3 bg-body rounded navbar-brand" href="#">Interview</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
     <div class="shadow-sm p-3 bg-body rounded collapse navbar-collapse" id="navbarNavDropdown">
       <ul class="navbar-nav nav-fill">
         <li class="nav-item" routerLinkActive="active">
