--- a/src/app/basic-operators/basic-operators.component.html
+++ b/src/app/basic-operators/basic-operators.component.html
@@ -21,7 +21,7 @@
   </div>
 </div>-->
 
-<app-side-nav></app-side-nav>
+<!--<app-side-nav></app-side-nav>-->
 <div class="d-flex bd-highlight">
   <div class="shadow-lg p-3 mb-5 bg-body rounded p-2 flex-shrink-1 bd-highlight">
     <app-basic-operators-nav-bar></app-basic-operators-nav-bar>
