from, startWith, switchMap, mergeMap operator example pages added

--- a/src/app/basic-operators-nav-bar/basic-operators-nav-bar.component.html
+++ b/src/app/basic-operators-nav-bar/basic-operators-nav-bar.component.html
@@ -10,6 +10,16 @@
       Operator </a>
   </li>
   <li class="nav-item">
+    <a class="nav-link" aria-current="page" [routerLink]="['from']"
+       [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active"> From
+      Operator </a>
+  </li>
+  <li class="nav-item">
+    <a class="nav-link" aria-current="page" [routerLink]="['start-with']"
+       [routerLinkActiveOptions]="{exact: true}" routerLinkActive="active"> StartWith
+      Operator </a>
+  </li>
+  <li class="nav-item">
     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
   </li>
 </ul>
