retryu when operator page implemented

--- a/src/app/_header/header.component.html
+++ b/src/app/_header/header.component.html
@@ -14,19 +14,19 @@
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" [routerLink]="['basic-operators']"
+          <a class="nav-link" aria-current="page" [routerLink]="['basic-operators/range']"
              routerLinkActive="active">
             Basic-Operators
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" [routerLink]="['intermediate-operators']"
+          <a class="nav-link" aria-current="page" [routerLink]="['intermediate-operators/switch-map']"
              routerLinkActive="active">
             Intermadiate-Operators
           </a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" aria-current="page" [routerLink]="['advanced-operators']"
+          <a class="nav-link" aria-current="page" [routerLink]="['advanced-operators/retry-when']"
              routerLinkActive="active">
             Advanced-Operators
           </a>
