--- a/src/app/intermediate-operators/swtich-map/switch-map.component.html
+++ b/src/app/intermediate-operators/swtich-map/switch-map.component.html
@@ -18,8 +18,8 @@
   <div class="col-sm-12">
     <div class="collapse" id="multiCollapseExample1">
       <div class="card card-body">
-        <p>mergeMap ve concatMap’den ayıran özellik; bir veri switchMap ile yayıldığında bir
-          önceki yayılma (emission) iptal edilir ve yeni sonuca abone (subscribed) olunur.</p>
+        <p>The feature that distinguishes it from mergeMap and concatMap; When a data is propagated by switchMap, the
+          previous emission is canceled and the new result is subscribed.</p>
         <br>
         <p>{{'let buttonObs = fromEvent(switchMapTimer, "click");'}}</p>
         <p>{{'let numberObs = interval(1000);'}}</p>
