--- a/src/app/advanced-operators/advanced-operators.component.html
+++ b/src/app/advanced-operators/advanced-operators.component.html
@@ -1,22 +1,8 @@
-<div class="row">
-  <div class="col-xs-5">
-    <br><!--
-    <app-operators-list></app-operators-list>-->
-    <!--<app-recipe-list (lastSelectedRecipe)="selectedRecipe = $event"></app-recipe-list>-->
+<div class="d-flex bd-highlight">
+  <div class="shadow-lg p-3 mb-5 bg-body rounded p-2 flex-shrink-1 bd-highlight">
+    <app-advanced-operators-nav-bar></app-advanced-operators-nav-bar>
   </div>
-  <div class="col-xs-1">
-    <div class="col-xs-12 vl"
-         style="border-left: 6px solid lightslategray; height: 800px; border-radius: 25px; padding-left: 10px;"></div>
-  </div>
-  <div class="col-xs-6">
-    <br>
-    <!--<app-recipe-detail [recipeDetailSelected]="selectedRecipe"-->
-    <!--<app-recipe-detail
-      *ngIf="selectedRecipe; else infoText"></app-recipe-detail>
-    <ng-template #infoText>
-      <p>Please select a Recipe!</p>
-    </ng-template>-->
-
+  <div class="shadow-lg p-3 mb-5 bg-body rounded p-2 w-100 bd-highlight">
     <router-outlet></router-outlet>
   </div>
 </div>
